book cards alignment fix

--- a/src/styles/bookshelf.css
+++ b/src/styles/bookshelf.css
@@ -131,7 +131,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     gap:7px;
 }
 .book .title {
@@ -146,7 +146,7 @@
     display: -webkit-box;
     width: 268px;
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
+    -webkit-line-clamp: 3;
     overflow: hidden;
     margin-top: 0;
     color: #747479;
